// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: Alerts should dispatch a create action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "name": "Mock Name",
      },
      "method": "POST",
      "url": "/v1/alerts",
    },
    "type": "CREATE_ALERT",
  },
]
`;

exports[`Action Creator: Alerts should dispatch a delete action 1`] = `
Array [
  Object {
    "meta": Object {
      "id": "alert-id",
      "method": "DELETE",
      "url": "/v1/alerts/alert-id",
    },
    "type": "DELETE_ALERT",
  },
]
`;

exports[`Action Creator: Alerts should dispatch a get alert action 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "showErrorAlert": false,
      "url": "/v1/alerts/0",
    },
    "type": "GET_ALERT",
  },
]
`;

exports[`Action Creator: Alerts should dispatch a list action 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "showErrorAlert": false,
      "url": "/v1/alerts",
    },
    "type": "LIST_ALERTS",
  },
]
`;

exports[`Action Creator: Alerts should dispatch a set muted status action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "muted": false,
      },
      "id": "alert-id",
      "method": "PUT",
      "url": "/v1/alerts/alert-id",
    },
    "type": "SET_ALERT_MUTED_STATUS",
  },
]
`;

exports[`Action Creator: Alerts should dispatch an update action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "name": "Updated Name",
      },
      "method": "PUT",
      "url": "/v1/alerts/alert-id",
    },
    "type": "UPDATE_ALERT",
  },
]
`;
